# Flask-EasySwagger

./: LICENSE  README.md  pyproject.toml
src/core/: __init__.py
src/core/schemas/: swagger.py
src/example/: __main__.py
