[tool.poetry]
name = "flask-easyswagger"
version = "0.1.0"
description = "Extension designed to simplify creating OpenAPI documentation for your APIs built with Flask."
authors = ["Carlos Mateus <carlosmatateumateus@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
isort = "^5.12.0"
black = "^23.11.0"
pytest = "^7.4.3"
pydantic = "^2.5.2"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
